--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,31 +10,33 @@
     <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="Title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/creator" app:layout_constraintHorizontal_bias="0.5"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/creator"/>
 
     <TextView
             android:id="@+id/creator"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:text="Title"
+            android:layout_height="wrap_content"
+            android:text="Creators"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintBottom_toTopOf="@+id/text"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintBottom_toTopOf="@+id/description"/>
 
     <TextView
             android:id="@+id/description"
             android:layout_width="wrap_content"
-            android:layout_height="500dp"
+            android:layout_height="550dp"
             android:text="Description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/creator" app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintTop_toBottomOf="@+id/creator"/>
 
 </android.support.constraint.ConstraintLayout>
