--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -15,6 +15,8 @@
             android:layout_marginTop="8dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintVertical_weight="1"
@@ -43,6 +45,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:text="Description"
+            android:textColor="@android:color/black"
+            android:lineSpacingMultiplier="1.2"
             app:layout_constraintVertical_weight="9"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
